tests/expectations/parser-expression/expression/path.out
x::y

X::Y

xxx::xxx

XXX::YYY::ZZZ

Self::pp::qq

foo.aleo::bar

foo / bar

Error [EPAR0370047]: expected '.' -- found '::'
    --> test_7:1:5
     |
   1 | self::y
     |     ^^
